--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="pera">Pera</string>
     <string name="sandia">Sandía</string>
     <string name="uva">Uva</string>
+    <string name="pulsar">Has pulsado</string>
 </resources>
